I can't spell/type

--- a/views/show.erb
+++ b/views/show.erb
@@ -22,7 +22,7 @@
   </head>
   <body>
     <article id='cal'>
-      <h1>Try putthing this in your calendar somewhere.</h1>
+      <h1>Try putting this in your calendar somewhere.</h1>
       <input value="<%= ical %>" readonly onclick="this.select()"/>
       <p>blame <a href="http://pkqk.net">pkqk</a></p>
     </article>
